serve - fix spacing on home page

--- a/webapp/src/app/pages/home.component.scss
+++ b/webapp/src/app/pages/home.component.scss
@@ -8,11 +8,9 @@
   h1 {
     font-size: 64px;
     line-height: 1.38;
-    font-stretch: 100%;
     margin-bottom: 10px;
     word-break: break-word;
     font-weight: bold;
-    letter-spacing: 1px;
   }
 
   h2 {
@@ -117,7 +115,6 @@
   font-family: 'JourneyHeading', 'Montserrat', sans-serif;
   font-stretch: 100%;
   margin-bottom: 0 !important;
-  letter-spacing: 1px;
   color: var(--JourneyRed);
   font-weight: 700;
 }
